[gd_scene format=3 uid="uid://dmsm7582xf7ul"]

[ext_resource type="Texture2D" uid="uid://cbfif0n84wa16" path="res://assets/UIbg/pausemenubg.png" id="1_3otxd"]
[ext_resource type="Script" uid="uid://pw30yh5txsr8" path="res://scripts/pausemenu.gd" id="1_r33we"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r33we"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ljkb"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3otxd"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vpyy4"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Pausemenu" type="Control" unique_id=598723302]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r33we")

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=2117980867]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -50.0
offset_right = 179.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r33we")

[node name="Pausemenubg" type="Sprite2D" parent="PanelContainer" unique_id=969964517]
position = Vector2(294, 156)
scale = Vector2(0.5450363, 0.5984513)
texture = ExtResource("1_3otxd")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer" unique_id=480538607]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PanelContainer/VBoxContainer" unique_id=848937244]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_8ljkb")
text = "CONTINUE MISSION"

[node name="RestartButton" type="Button" parent="PanelContainer/VBoxContainer" unique_id=2057488912]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_3otxd")
text = "TACTICAL RESTART"

[node name="MenuButton" type="Button" parent="PanelContainer/VBoxContainer" unique_id=1337679126]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_vpyy4")
text = "MISSION CONTROL (MENU)"

[connection signal="pressed" from="PanelContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
